# wasm_interface_types_demo

./: README.md
node_web/: README.md  package-lock.json  package.json  server.js
node_web/static/: index_glue.html  index_glue_mv.html  index_via_glue.js  index_via_glue_mv.js  rust_wt_js_demo.js  rust_wt_js_demo_bg.wasm  rust_wt_js_demo_mv.js
nodejs_host/: README.md  loader_13_7_0.mjs  package-lock.json  package.json  run.mjs
python_host/: README.md  run.py  rust_wt_js_demo.wasm
rust_host/: Cargo.toml  rust_wt_js_demo.wasi.wasm
rust_host/src/: main.rs
rust_wt_js_demo/: Cargo.toml  README.md
rust_wt_js_demo/src/: lib.rs
